# FSW-Payload

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  download_models.sh  effnet_0997acc.onnx  install.sh  install_deps.sh  install_opencv4.9.0_Jetpack6.0.sh  main.cpp  run.sh  temp.py
config/: config.toml  dataset_config.toml  imu_data.csv  od.toml
configuration/: configuration.toml
include/: README.md  camera.hpp  camera_manager.hpp  commands.hpp  configuration.hpp  frame.hpp  image_sender.hpp  logger.hpp  messages.hpp  monitoring.hpp  payload.hpp  queues.hpp  task.hpp
include/communication/: comms.hpp  ipc.hpp  named_pipe.hpp  tilepack.hpp  uart.hpp
include/core/: README.md  data_handling.hpp  errors.hpp  monitoring.hpp  task.hpp  thread_pool.hpp  timing.hpp  utils.hpp
include/gnc/: utils.hpp
include/imu/: README.md  bmx160.hpp  imu_manager.hpp
include/inference/: inference_manager.hpp  inference_results.hpp  orchestrator.hpp  runtimes.hpp  structure.hpp  structures.hpp  types.hpp
include/navigation/: README.md  batch_nlp.hpp  batch_optimization.hpp  measurement_residuals.hpp  od.hpp  od_measurements.hpp  pose_dynamics.hpp  pose_integrator.hpp  quaternion.hpp  test_jacobians.hpp  tracking.hpp  trajectory_initializer.hpp  utils.hpp
include/telemetry/: README.md  monitoring.hpp  tegra.hpp  telemetry.hpp
include/vision/: README.md  camera.hpp  camera_manager.hpp  dataset.hpp  dataset_manager.hpp  frame.hpp  landmark_detection.hpp  ld.hpp  prefiltering.h  prefiltering.hpp  rc.hpp  region_classifier.hpp  regions.hpp  reprocessing.hpp
models/: .gitignore  README.md  python.sh  requirements.txt
models/V1/sample_images/: .gitignore  l8_17R_00040.txt  l8_17T_00277.txt
models/V1/trained-ld/: add_nms_to_onnx.py  convert_ld_torch_script.py  ld_pt_to_trt_script.py  run_sample_ld.py
models/V1/trained-ld/10S/: dataset.yaml
models/V1/trained-ld/10T/: dataset.yaml
models/V1/trained-ld/11R/: dataset.yaml
models/V1/trained-ld/12R/: dataset.yaml
models/V1/trained-ld/16T/: dataset.yaml
models/V1/trained-ld/17R/: dataset.yaml
models/V1/trained-ld/17T/: dataset.yaml
models/V1/trained-ld/18S/: dataset.yaml
models/V1/trained-ld/32S/: dataset.yaml
models/V1/trained-ld/32T/: dataset.yaml
models/V1/trained-ld/33S/: dataset.yaml
models/V1/trained-rc/: convert_onnx.py  convert_tensorrt.py  run_sample_rc.py
new_payload/: command_thread.py  experiment_thread.py  file_downlink_manager.py  main.py  thread_shared.py
new_payload/scripts/: convert_telemetry_to_json.py  laptop_server.py  remote_upload.sh  tlm_to_json.py
py_interface/: cli_cmd.py  controller.py  definitions.py  ipc_comms.py  local_smoke_test.py  protocol.py  test_run_local.py
python/: cli_cmd.py  cmds.py  communication.py  controller.py  definitions.py  ipc_comms.py  test_run_local.py  uart_comms.py
python_od/: data_loader.py  ipopt_od.py  optimizer.py  quaternion.py  residuals.py
scripts/: CMakeLists.txt  calibration.py  gyro_allan_variance.py  gyro_plot.py  imu_plot.py  plot_batch_opt.py  prepare_ldmeas.cpp  reprocess_dataset.cpp  reprocess_image.cpp  run_batch_opt.cpp  run_camera.cpp  run_camera_inference.cpp  run_dataset.cpp  run_imu.cpp  run_inference.cpp  run_inference_to_mainboard.cpp  run_od_on_dataset.cpp  run_od_pipeline.cpp  run_prefiltering.cpp  yolo_detector.cpp
scripts/navigation/: run_batch_opt.cpp  test_jacobians.cpp
scripts/tilepack_test/: generate_tilepack_raw.cpp
src/: CMakeLists.txt  camera.cpp  camera_manager.cpp  cli_cmd.cpp  commands.cpp  configuration.cpp  frame.cpp  image_sender.cpp  logger.cpp  main.cpp  messages.cpp  monitoring.cpp  payload.cpp  queues.cpp  task.cpp
src/communication/: CMakeLists.txt  named_pipe.cpp  tilepack.cpp  uart.cpp
src/core/: CMakeLists.txt  data_handling.cpp  errors.cpp  monitoring.cpp  task.cpp  thread_pool.cpp  timing.cpp  utils.cpp
src/gnc/: CMakeLists.txt  utils.cpp
src/imu/: CMakeLists.txt  bmx160.cpp  imu.cpp  imu_manager.cpp  run_imu.cpp  test_imu.cpp  test_imu_gyro.cpp
src/inference/: CMakeLists.txt  inference_manager.cpp  orchestrator.cpp  runtimes.cpp
src/navigation/: CMakeLists.txt  batch_nlp.cpp  batch_optimization.cpp  measurement_residuals.cpp  od.cpp  od_alg.cpp  od_measurements.cpp  pose_dynamics.cpp  quaternion.cpp  run_batch_opt.cpp  test_jacobians.cpp  trajectory_initializer.cpp  utils.cpp
src/navigation/imu/bmi160_bmx160/: README.md  SConscript
src/python_payload/: camera_driver.py  command_thread.py  cpp_script_examples.py  experiment_runner.py  experiment_thread.py  external_bin_calls.py  file_downlink_manager.py  orbit_determination_runner.py  run.py  telemetry_thread.py  thread_shared.py  uart_thread.py
src/python_payload/scripts/: test_prefilter.py
src/telemetry/: CMakeLists.txt  monitoring.cpp  tegra.cpp  tegra_processor.cpp  telemetry.cpp
src/telemetry/samples/: tegrastats_data.txt
src/vision/: CMakeLists.txt  camera.cpp  camera_manager.cpp  dataset.cpp  dataset_manager.cpp  frame.cpp  inference_results.cpp  ld.cpp  prefiltering.cpp  rc.cpp  region_classifier.cpp  reprocessing.cpp  test_prefiltering.cpp
tests/: .gitignore  CMakeLists.txt  run_dataset.cpp  run_inference.cpp  test_camera.cpp  test_camera_inference.cpp  test_camera_manager.cpp  test_commands.cpp  test_cpp_od_scripts.py  test_data_handling.cpp  test_dataset.cpp  test_errors.cpp  test_imu.cpp  test_inference.cpp  test_inference_to_mainboard.cpp  test_od.cpp  test_prefiltering.cpp  test_thread_pool.cpp  test_tilepack_dh.cpp  yolo_detector.cpp
tests/navigation/: run_batch_opt.cpp  test_frame_conversions.cpp  test_jacobians.cpp  test_od.cpp  test_quaternion.cpp
tests/sample_data/: frame_example.json
tests/sample_data/img/: README.md
tests/tilepack_test/: build_cpp.sh  oldcmake.txt  reconstruct.py  tilepack.cpp  tilepack.hpp  tilepack.py  tilepack_example.cpp
tests/tilepack_test/tilepack/: packets_manifest.csv
tests/tilepack_test/tilepack_old/: packets_manifest.csv
tests/vision/: test_frame_conversions.cpp  test_region_classifier.cpp
(+7 files in other folders)
